[package]
name = "belainf"
version = "0.1.0"
authors = ["Barone <qbbarone@tutanota.com>"]
edition = "2021"
description = "simple system info program"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.24.1"
